Fix MessageFile overflow on small screens

--- a/src/Components/Messages/MessageMedia/MessageMedia.css
+++ b/src/Components/Messages/MessageMedia/MessageMedia.css
@@ -16,6 +16,6 @@
 
 @media only screen and (max-width: 600px) {
   .MessageMediaContainer {
-
+    width: auto;
   }
 }
